--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
+
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha08"
 
     // testing
     testImplementation "junit:junit:$junitVersion"
